--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   },
   "devDependencies": {
     "chai": "2.0.0",
-    "mocha": "2.1.0",
     "gulp": "3.9.0",
-    "gulp-mocha": "2.1.1",
     "gulp-jshint": "1.11.0",
-    "jshint-stylish": "2.0.0"
+    "gulp-mocha": "2.1.1",
+    "jshint-stylish": "2.0.0",
+    "mocha": "2.1.0"
   },
   "repository": {
     "type": "git",
